Update and rename latihan1.widsun.html to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Putu Cangiri</li>
             <li>Putu Keju</li>
             <br>
-    <h5>untuk membuat kue putu dapat dilihat di<a href="link ini.html"> link ini</a></h5>
+    <h5>untuk membuat kue putu dapat dilihat di<a href="index(1).html"> link ini</a></h5>
             </br>
             </ul>
             </body>
