--- a/index(1).html
+++ b/index(1).html
@@ -33,6 +33,8 @@
             <li>Panaskan kukusan dan kukus selama 10-15 menit,atau sampai matang.</li>
             <li>Dalam wadah,masukkan kelapa parut,garam,dan daun pandan,lalu kukus sampai matang.</li>
         </ol>
-        <a href="latihan1.widsun.html">kembali</a>
+        <a href="index.html">kembali</a>
+    </body>
+</html>
 
 
