--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
             <li>Putu Passe</li>
             <li>Putu Cangiri</li>
             <li>Putu Keju</li>
-            <br>
-    <h5>untuk membuat kue putu dapat dilihat di<a href="index(1).html"> link ini</a></h5>
-            </br>
-            </ul>
+        </ul>
+        <p>untuk membuat kue putu dapat dilihat di<a href="index(1).html"> link ini</a></p>
             </body>
     
 </html>
